# llm-agents-fsm

./: .gitignore  README.md  pyproject.toml
git-system/: git-agent-basic.py  git-agent-fsm.py  git-agent-plan.py  git_shell_tools.py  property_verifier.py
git-system/resources/: GIT_AP_CANDIDATES.json  GIT_PROPERTIES_AST.json
shrdlu-block/: __init__.py  __main__.py  property_verifier.py  run_agent.py  shrdlu_agent_basic.py  shrdlu_agent_fsm.py  shrdlu_agent_plan.py  simulator_api.py  terminal.py  tla_verifier.py
shrdlu-block/resources/: SHRDLU_AP_CANDIDATES.json
tests/: test_git_fsm_tree_shape.py  test_session_result_writes.py  test_tla_verifier_skipped.py  test_tree_report_cleanup.py
utils/: __init__.py  agent_planning.py  chat_terminal.py  git-learning-installer.sh  git_learning_reset.py  llm_client.py  planning_modes.py  planning_terminal.py  planning_tree.py  property_catalog.py  run_agents.py  session.py  tla_verifier.py  tree_report.py
